# music_generator

./: .gitignore  A-108BPM-2023-07-18 14:30:15.074658521 +03:00.mid  C-117BPM-2023-07-24 11:47:43.209149385 +03:00.mid  Cargo.toml  D#-105BPM-2023-07-23 12:58:49.807383213 +03:00.mid  D#-2023-07-02_15:40:47.519650174_+03:00.mid  D#-2023-07-04 09:53:45.984289340 +03:00.mid  D-101BPM-2023-07-22 20:20:09.795937691 +03:00.mid  D-89BPM-2023-07-18 14:32:49.107458304 +03:00.mid  E-2023-07-02_15:51:41.962661309_+03:00.mid  E-85BPM-2023-07-18 16:30:41.082171266 +03:00.mid  E-86BPM-2023-07-18 16:28:16.188273935 +03:00.mid  E-92BPM-2023-07-22 23:49:13.149795843 +03:00.mid  F#-2023-07-02 16:07:29.821449832 +03:00.mid  F#-2023-07-02_23:02:59.680187162_+03:00.mid  F#-2023-07-04 09:59:35.989296336 +03:00.mid  F#-2023-07-04 10:50:29.082093418 +03:00.mid  F-106BPM-2023-07-18 14:31:49.567669239 +03:00.mid  F-2023-07-04 10:20:27.565958094 +03:00.mid  G#-2023-07-02 15:36:53.920181345 +03:00.mid  G#-2023-07-02 16:09:52.192133177 +03:00.mid  G-112BPM-2023-07-22 20:23:14.423519291 +03:00.mid  G-2023-07-04 10:06:45.105021743 +03:00.mid  G-2023-07-04 10:49:40.986505701 +03:00.mid  G-96BPM-2023-07-24 11:45:32.758085141 +03:00.mid  IMG1.pptx  IMG2.pptx  IMG_Team_Project_Presentation.pptx  LICENSE  README.md  final1.mid  final2.mid  final3.mid  track_settings.txt
src/: lib.rs  main.rs  melody_type.rs  midi.rs  note.rs  note_data.rs
src/genetic/: crossover.rs  fitness.rs  mod.rs  mutation.rs  selection.rs
src/midi/: bpm.rs  composer.rs  mod.rs
src/notes/: key.rs  mod.rs  note.rs  note_data.rs
(+10 files in other folders)
