[package]
name = "music_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ghakuf = "0.5.6"
strum = "0.25.0"
strum_macros = "0.25.0"
monoio = "0.1.4"
rand = {version="0.8.5", features=["std", "std_rng"]}
rust-music-theory = "0.2.0"
astro-float = "0.7.1"
itertools = "0.11.0"
